# swadloon

./: Cargo.toml  README.md  flake.nix
budew/: Cargo.toml
budew/src/: main.rs  server.rs  shared.rs  upload.rs
shared/: Cargo.toml
shared/src/: anilist.rs  error.rs  lib.rs  server.rs
src/: error.rs  main.rs  manga.rs  process.rs  server.rs  shared.rs  upload.rs  util.rs
sunkern/: Cargo.toml
sunkern/src/: main.rs
