[package]
name = "swadloon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
regex = "1.9.3"
reqwest = { version = "0.11.18", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
urlencoding = "2.1.3"
