[package]
name = "swadloon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuid2 = "0.1.2"
iso8601 = { version = "0.6.1", features = ["serde"] }
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
urlencoding = "2.1.3"
