[package]
name = "sunkern"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
dirs = "5.0.1"
image = "0.24.7"
lipsum = "0.9.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
swadloon = { version = "0.1.0", path = "../shared" }
